tests/Rules/Media/Fixtures/invalid/object_no_alt.html.twig
<object data="file.swf"></object>
